# Resumancy

./: Cargo.toml  README.md
src/: batch.rs  build_master.rs  cache.rs  eval.rs  hiring_manager.rs  input.rs  kb.rs  lib.rs  llm.rs  main.rs  paths.rs  prompts.rs  resume_builder.rs  resume_coach.rs  stats.rs  ui.rs
