[package]
name = "pipelines"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "rustls-tls"] }
scraper = "0.19"
rig-core = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4.3"
sha2 = "0.11.0-rc.5"
